RESOLVED FIXED121039
AX: WebKit exposes AXTitleUIElement incorrectly on checkboxes and radio buttons
https://bugs.webkit.org/show_bug.cgi?id=121039
Summary AX: WebKit exposes AXTitleUIElement incorrectly on checkboxes and radio buttons
James Craig
Reported 2013-09-09 13:07:03 PDT
AX: WebKit exposes AXTitleUIElement incorrectly on checkboxes and radio buttons. It flattens the AXTitle instead of using AXTitleUIElement to point to the group that can contain other interactive elements (links, text fields, select boxes) inside the checkbox or radio button label. <rdar://problem/12521399>
Attachments
patch (33.04 KB, patch)
2013-09-10 16:16 PDT, chris fleizach
sam: review+
chris fleizach
Comment 2 2013-09-10 16:16:30 PDT
chris fleizach
Comment 3 2013-09-11 11:25:03 PDT
James Craig
Comment 4 2014-02-07 11:15:08 PST
*** Bug 107976 has been marked as a duplicate of this bug. ***
James Craig
Comment 5 2019-09-26 11:48:16 PDT
*** Bug 120374 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.